fix: исправить метод search в InMemoryItemStorage